# claw-code

./: .gitignore  IMPLEMENT_GOOGLE_AI_STUDIO_SUPPORT.md  REPO_REQUIREMENTS.md  ROADMAP.md  launch-claw-groq.ps1  wipe-usb-aggressive.bat  wipe-usb-diskpart.bat  wipe-usb-nuclear.bat
.github/workflows/: release.yml
installer/: claw.iss
rust/: .gitignore  Cargo.toml
rust/.claw/plugins/: installed.json
rust/.claw/sessions/da6cb84226a9bf0f/: session-1775599493975-0.jsonl  session-1775599550454-0.jsonl  session-1775599611238-0.jsonl  session-1775599915544-0.jsonl  session-1775599955251-0.jsonl  session-1775600020643-0.jsonl  session-1776492073719-0.jsonl
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: anthropic.rs  google_ai_studio.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: proxy_integration.rs
rust/crates/plugins/bundled/google-workspace-manager/: README.md
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  compact.rs  conversation.rs  file_ops.rs  hooks.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  session.rs  worker_boot.rs
rust/crates/rusty-claude-cli/: Cargo.toml  build.rs
rust/crates/rusty-claude-cli/src/: input.rs  llama_cpp.rs  main.rs
rust/crates/rusty-claude-cli/tests/: compact_output.rs  mock_parity_harness.rs
scripts/: new-code-signing-cert.ps1  package-windows-release.ps1
src/: runtime.py  setup.py  system_init.py  tool_pool.py  tools.py
tests/: test_porting_workspace.py
(+2 files in other folders)
